Finish Tounge Analysis

--- a/tex/sections/4-application.tex
+++ b/tex/sections/4-application.tex
@@ -225,3 +225,18 @@ See Figure \cref{fig:4-outliers}. \dots \todo{Outlier diskutieren} See also \cre
   \item Die Analysie ist hier auf SRV level.
   \item Sofern das alles so Sinn macht, könnte man jetzt noch Konfidenzintervalle undsowas dazu berechnen.
 \end{itemize}
+\newpage
+\begin{figure}
+  \centering
+  \begin{subfigure}{0.75\textwidth}
+    \centering
+    \inputTikz{44-tounge-means}
+    \caption{Means}
+  \end{subfigure}
+  \begin{subfigure}{0.25\textwidth}
+    \centering
+    \inputTikz{44-tounge-dists}
+    \caption{Diffs}
+  \end{subfigure}
+  \label{fig:4-tounges}
+\end{figure}
