--- a/tex/sections/3-estimation.tex
+++ b/tex/sections/3-estimation.tex
@@ -270,10 +270,14 @@ with $j = 1, \dots, m_i - 1$ for $m_i$ the number of observed points of the orig
   \widetilde q_{ij}^{(k)} = 
   \frac{1}{\sqrt{L[\beta_i]}}\cdot \frac{1}{\sqrt{\left(\gamma_i^{(k)}\right)^{-1}(t_{ij+1}) - \left(\gamma_i^{(k)}\right)^{-1}(t_{ij})}} \cdot \frac{\beta_i(t_{ij+1}) - \beta_i(t_{ij})}{\sqrt{\norm{\beta_i(t_{ij+1}) - \beta_i(t_{ij})}}} \,.
 \end{equation}
-Given a fully observed smooth mean function $\hat\mu_q^{(k)}$ we can then analytically calculate the scalar product as
+Given a fully observed smooth mean function $\hat\mu_q^{(k)}$ we can then calculate the scalar product as
 \begin{equation}
 \langle \widetilde q_i^{(k)}, \hat\mu_q^{(k)} \rangle =
   \int_0^1 \langle \widetilde q_i^{(k)}(t), \hat\mu_q^{(k)}(t) \rangle \dt =
   \sum_{j=0}^{m_i-1} \int_{\left(\gamma_i^{(k)}\right)^{-1}(t_{ij})}^{\left(\gamma_i^{(k)}\right)^{-1}(t_{ij+1})} \langle \widetilde q_{ij}^{(k)},\, \hat\mu_q^{(k)} (t) \rangle \dt \,.
 \end{equation}
-\todo[inline]{Noch ein paragraph zu curve-wise interplation mit der penalty auf cov matrix. Verweis auf appendix.}
+An alternative approach is discussed in \cref{app:a-smooth}.
+There, instead of treating the SRV curves as piecewise-constant, they are smoothed in the mean basis $\widetilde q^{(k)} \approx b(s)^\top \hat\theta_i^{(k)}$, where the coefficient vector $\hat\theta_i^{(k)}$ is estimated in way that penalizes deviations from the mean covariance-structure.
+The scalar product is then given by $\langle \widetilde q_i^{(k)}, \hat\mu_q^{(k)} \rangle \approx (\hat\theta_i^{(k)})^H G \hat\theta^{(k)}$.
+While this method suceeds in estimating very natural looking smooth SRV curves, their integral is not guaranteed to go through the observed points on data curve level.
+Because of these and other theoretical concerns this approach did not end up getting used in this thesis
